force-app/main/default/objects/CG_Reporting__c.object
<CustomObject>
    <fields>
        <fullName>AnnualResendEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AnnualResendEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CG_Agree_to_Study__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>ข้าพเจ้าจะศึกษา</inlineHelpText>
        <label>Agree to Study</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CG_Download_Manual__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Download CG Manual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CG_Received_Manual__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>ข้าพเจ้าได้รับคู่มือหลักการ</inlineHelpText>
        <label>CG Received Manual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CG_Reporting_History__c</fullName>
        <label>CG Reporting History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>COI_Action__c</fullName>
        <label>COI Action</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>COI_Agree__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>เงื่อนไขและข้อตกลง</inlineHelpText>
        <label>Agree</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COI_Detail__c</fullName>
        <inlineHelpText>รายละเอียด</inlineHelpText>
        <label>COI Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>COI_Disclosure__c</fullName>
        <label>COI Disclosure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NotSure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COI_Transaction_By_Me__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>ทำธุรกรรมโดยตนเอง</inlineHelpText>
        <label>Transaction By Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COI_Transaction_By_Other_Name__c</fullName>
        <label>Transaction By Other Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COI_Transaction_By_Other_Relation_Name__c</fullName>
        <label>Transaction By Other Relation Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COI_Transaction_By_Other_Relation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>ทำธุรกรรมโดยบุคคลที่มีความสัมพันธ์ทางสายเลือก</inlineHelpText>
        <label>Transaction By Other Relation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COI_Transaction_By_Other_Relationship__c</fullName>
        <inlineHelpText>ความสัมพันธ์</inlineHelpText>
        <label>Transaction By Other Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COI_Transaction_By_Other__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>ทำธุรกรรมโดยผู้อื่น</inlineHelpText>
        <label>Transaction By Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COI_Transaction_Company_Name__c</fullName>
        <label>COI Transaction Company Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Thai Oil Plc</fullName>
                </value>
                <value>
                    <fullName>Thai Paraxylene Co., Ltd.</fullName>
                </value>
                <value>
                    <fullName>Thai Lube Base Plc</fullName>
                </value>
                <value>
                    <fullName>Thaioil Ethanol Co., Ltd.</fullName>
                </value>
                <value>
                    <fullName>Thaioil Energy Services Co., Ltd.</fullName>
                </value>
                <value>
                    <fullName>TOP SPP Co., Ltd.</fullName>
                </value>
                <value>
                    <fullName>Thaioil Solvent Co., Ltd.</fullName>
                </value>
                <value>
                    <fullName>TOPNEXT International Co., Ltd.</fullName>
                </value>
                <value>
                    <fullName>Thaioil Treasury Center Co., Ltd.</fullName>
                </value>
                <value>
                    <fullName>PT TOP Investment Indonesia</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <label>Other (Please specify)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COI_Transaction_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>มีการทำธุรกรรมกับบริษัท</inlineHelpText>
        <label>Transaction Company</label>
        <referenceTo>SD_Company__c</referenceTo>
        <relationshipLabel>CG Reporting</relationshipLabel>
        <relationshipName>CG_Reporting</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>COI_Transaction_Other_Company_Name__c</fullName>
        <label>COI Transaction Other Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancelled_By__c</fullName>
        <label>Cancelled By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancelled_Date__c</fullName>
        <label>Cancelled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <formula>Owner:User.CompanyName</formula>
        <label>Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debug_Log__c</fullName>
        <label>Debug Log</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <formula>Owner:User.Department</formula>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Id__c</fullName>
        <formula>Owner:User.Employee_Id__c</formula>
        <label>Employee Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Duration__c</fullName>
        <label>End Duration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <formula>Owner:User.Function__c</formula>
        <label>Function</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLGC_Action_By_Company_EN__c</fullName>
        <label>GLGC Action By Company EN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLGC_Action_By_Company_TH__c</fullName>
        <label>GLGC Action By Company TH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLGC_Action_By_EN__c</fullName>
        <label>GLGC Action By EN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLGC_Action_By_Position_EN__c</fullName>
        <label>GLGC Action By Position EN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLGC_Action_By_Position_TH__c</fullName>
        <label>GLGC Action By Position TH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLGC_Action_By_TH__c</fullName>
        <label>GLGC Action By TH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLGC_Action_Date__c</fullName>
        <label>GLGC Action Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GLGC_Approver_Status__c</fullName>
        <label>GLGC Approver Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLGC_Id__c</fullName>
        <label>GLGC Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLGC_Receive_By__c</fullName>
        <label>GLGC Receive By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLVP_Action_By_Company_EN__c</fullName>
        <label>GLVP Action By Company EN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLVP_Action_By_Company_TH__c</fullName>
        <label>GLVP Action By Company TH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLVP_Action_By_EN__c</fullName>
        <label>GLVP Action By EN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLVP_Action_By_Position_EN__c</fullName>
        <label>GLVP Action By Position EN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLVP_Action_By_Position_TH__c</fullName>
        <label>GLVP Action By Position TH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLVP_Action_By_TH__c</fullName>
        <label>GLVP Action By TH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLVP_Action_Date__c</fullName>
        <label>GLVP Action Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GLVP_Approver_Status__c</fullName>
        <label>GLVP Approver Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLVP_Comment__c</fullName>
        <label>GLVP Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GLVP_Id__c</fullName>
        <label>GLVP Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GenerateFromBatch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GenerateFromBatch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gift_Date__c</fullName>
        <label>Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gift_Item__c</fullName>
        <label>Gift Item</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gift_Status__c</fullName>
        <label>Gift Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>InStock</fullName>
                    <label>In Stock</label>
                </value>
                <value>
                    <fullName>Donated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gift_Supervisor_Suggestion__c</fullName>
        <label>Gift Supervisor Suggestion</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Send to GLVP</fullName>
                </value>
                <value>
                    <fullName>Keep for internal use</fullName>
                </value>
                <value>
                    <fullName>Send back to the giver</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsAcknowledge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsAcknowledge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Department__c</fullName>
        <label>Owner Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Full_Name_EN__c</fullName>
        <formula>Owner:User.FirstName_EN__c + &apos; &apos; +  Owner:User.LastName_EN__c</formula>
        <label>Owner Full Name EN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Full_Name_TH__c</fullName>
        <formula>Owner:User.FirstName_TH__c + &apos; &apos; +  Owner:User.LastName_TH__c</formula>
        <label>Owner Full Name TH</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Function__c</fullName>
        <label>Owner Function</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Position__c</fullName>
        <formula>Owner_Function__c + 
IF(NOT(ISBLANK(Owner_Department__c)), &apos; / &apos; + Owner_Department__c,&apos;&apos;) +
IF(NOT(ISBLANK(Owner_Section__c)), &apos; / &apos; + Owner_Section__c,&apos;&apos;) +
IF(NOT(ISBLANK(Owner_Unit__c)), &apos; / &apos; + Owner_Unit__c,&apos;&apos;)</formula>
        <label>Owner Position</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Section__c</fullName>
        <label>Owner Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Unit__c</fullName>
        <label>Owner Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reported_By_Company_EN__c</fullName>
        <label>Reported By Company EN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reported_By_Company_TH__c</fullName>
        <label>Reported By Company TH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reported_By_Department__c</fullName>
        <label>Reported By Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reported_By_EN__c</fullName>
        <label>Reported By EN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reported_By_Employee_Id__c</fullName>
        <label>Reported By Employee Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reported_By_Function__c</fullName>
        <label>Reported By Function</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reported_By_Position_EN__c</fullName>
        <label>Reported By Position EN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reported_By_Position_TH__c</fullName>
        <label>Reported By Position TH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reported_By_Section__c</fullName>
        <label>Reported By Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reported_By_TH__c</fullName>
        <label>Reported By TH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reported_Date__c</fullName>
        <label>Reported Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Running_No__c</fullName>
        <label>Running No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <formula>Owner:User.Section__c</formula>
        <label>Section</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Duration__c</fullName>
        <label>Start Duration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_JSON__c</fullName>
        <label>Status JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WaitingForSubmit</fullName>
                    <label>Waiting for Submit</label>
                </value>
                <value>
                    <fullName>WaitingSupervisor</fullName>
                    <label>Waiting Supervisor</label>
                </value>
                <value>
                    <fullName>WaitingGLVP</fullName>
                    <label>Waiting GLVP</label>
                </value>
                <value>
                    <fullName>WaitingGLGC</fullName>
                    <label>Waiting GLGC</label>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submit_Within_Date__c</fullName>
        <label>Submit Within Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Supervisor_Action_By_Company_EN__c</fullName>
        <label>Supervisor Action By Company EN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor_Action_By_Company_TH__c</fullName>
        <label>Supervisor Action By Company TH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor_Action_By_EN__c</fullName>
        <label>Supervisor Action By EN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor_Action_By_Position_EN__c</fullName>
        <label>Supervisor Action By Position EN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor_Action_By_Position_TH__c</fullName>
        <label>Supervisor Action By Position TH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor_Action_By_TH__c</fullName>
        <label>Supervisor Action By TH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor_Action_Date__c</fullName>
        <label>Supervisor Action Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Supervisor_Approver_Status__c</fullName>
        <label>Supervisor Approver Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor_Comment__c</fullName>
        <label>Supervisor Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Supervisor_Name__c</fullName>
        <formula>User__r.FirstName_EN__c + &apos; &apos; +  User__r.LastName_EN__c</formula>
        <label>Supervisor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Report__c</fullName>
        <label>Type of Report</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>COIAnnual</fullName>
                    <label>COI (Annual Report)</label>
                </value>
                <value>
                    <fullName>COIIncident</fullName>
                    <label>COI (Incident Report)</label>
                </value>
                <value>
                    <fullName>COINewEmployee</fullName>
                    <label>COI (New Employee Report)</label>
                </value>
                <value>
                    <fullName>CGNewEmployee</fullName>
                    <label>CG Manual (New Employee)</label>
                </value>
                <value>
                    <fullName>CGAnnual</fullName>
                    <label>CG Manual (Annual)</label>
                </value>
                <value>
                    <fullName>CGManual</fullName>
                    <label>CG Manual (Manual)</label>
                </value>
                <value>
                    <fullName>GiftRegistration</fullName>
                    <label>Gift Registration</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <formula>Owner:User.Unit__c</formula>
        <label>Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supervisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CG_Reporting</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isDisable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDisable</label>
        <type>Checkbox</type>
    </fields>
    <label>CG Reporting</label>
    <nameField>
        <displayFormat>Report-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <recordTypes>
        <fullName>CG_COI_Annual</fullName>
        <active>true</active>
        <label>CG COI Annual</label>
    </recordTypes>
    <recordTypes>
        <fullName>CG_COI_Incident</fullName>
        <active>true</active>
        <label>CG COI Incident</label>
    </recordTypes>
    <recordTypes>
        <fullName>CG_COI_New_Employee</fullName>
        <active>true</active>
        <label>CG COI New Employee</label>
    </recordTypes>
    <recordTypes>
        <fullName>CG_Manual</fullName>
        <active>true</active>
        <label>CG Manual</label>
    </recordTypes>
    <recordTypes>
        <fullName>CG_Manual_Annual</fullName>
        <active>true</active>
        <label>CG Manual Annual</label>
    </recordTypes>
    <recordTypes>
        <fullName>CG_Manual_New_Employee</fullName>
        <active>true</active>
        <label>CG Manual New Employee</label>
    </recordTypes>
    <recordTypes>
        <fullName>Gift_Registration</fullName>
        <active>true</active>
        <label>Gift Registration</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>